<resources>
    <string name="app_name">PillsGT</string>
    <string name="app_shrot_name">PillsGT</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_pills">Add</string>
    <string name="action_about">About project</string>
    <string name="action_help">Help</string>
    <string name="today_drugs">Medicals for admission today</string>
    <string name="empty_index_list">No medicals</string>
    <string name="label_my_medicals">My medicals</string>
    <string name="title_activity_settings">Settings</string>

    <!--Buttons-->
    <string name="button_add">Add</string>
    <string name="button_edit">Edit</string>

    <!--Messages    -->
    <string name="exit_press_back_twice_message">Press back again to exit</string>
    <string name="message_success_row_deleted">Record deleted successfully</string>
    <string name="message_data_saved">Data saved</string>

    <string name="alert_dialog_choose_value">Choose Value</string>
    <string name="alert_dialog_choose_number">Choose a number:</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>


    <string name="title_dashboard">Dashboard</string>
    <string name="title_add">Add</string>
    <string name="title_medicals">Medicals</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pills GT</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>

    <string name="l_menu_settings">Settings</string>
    <string name="l_menu_profile">Profile</string>
    <string name="l_menu_terms">Terms</string>
    <string name="l_menu_confidence">Confidence</string>

    <string name="l_menu_docs">Docs</string>


    <string name="r_menu_sign_up">Sign Up</string>
    <string name="r_menu_sign_in">Sign In</string>
    <string name="r_menu_logout">Logout</string>

    <string name="title_activity_terms">Terms and conditions</string>

    <!--Crons -->
    <string name="label_when">When get</string>
    <string name="label_how">How often</string>

    <string name="autocomplete_placeholder">Enter medicine name</string>

    <string name="label_reminders">Reminders</string>
    <string name="label_reminder_times">Reminder times</string>
    <string name="label_schedulers">Schedule</string>
    <string name="label_duration">Duration</string>
    <string name="duration_start">Start</string>
    <string name="duration_end">End</string>

    <string name="before_eat">Before eat</string>
    <string name="after_eat">After eat</string>
    <string name="while_eating">While Eating</string>
    <string name="ignore">Ignore</string>
    <string name="others">Others</string>

    <string name="once_a_day">Once a day</string>
    <string name="twice_a_day">Twice a day</string>
    <string name="three_times_a_day">3 times a day</string>
    <string name="four_times_a_day">4 times a day</string>
    <string name="five_times_a_day">5 times a day</string>
    <string name="six_times_a_day">6 times a day</string>
    <string name="every_30_minutes">Every 30 minutes</string>
    <string name="every_1_hour">Every hour</string>
    <string name="every_2_hours">Every 2 hours</string>
    <string name="every_3_hours">Every 3 hours</string>
    <string name="every_4_hours">Every 4 hours</string>
    <string name="every_5_hours">Every 5 hours</string>
    <string name="every_6_hours">Every 6 hours</string>

    <string name="enter_more_symbols">Enter more symbols</string>
    <string name="no_results">No results</string>

    <string name="label_frequency">Frequency</string>
    <string name="every_day">Every day</string>
    <string name="days_of_week">Days of week</string>
    <string name="days_interval">Days interval</string>

    <string name="duration_input_selected_period">Selected period</string>
    <string name="duration_input_continuous">Continuous</string>
    <string name="duration_input_number_of_days">Number of days</string>

    <string name="novalid_pillrule_name">Empty medicine name.</string>

    <string name="title_activity_confidence">Privacy agreement</string>

    <string name="alert_activity_taked">Taked</string>
    <string name="alert_activity_later">Later</string>
    <string name="alert_activity_canceled">Cancel</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Enter name</string>

    <!-- Settings for Time settings -->
    <string name="pref_header_schedule_settings">Schedule &amp; time settings</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <!--Time settings-->
    <string name="time_breakfast">Breakfast Time</string>
    <string name="time_lunch">Lunch Time</string>
    <string name="time_dinner">Dinner Time</string>
    <string name="time_snack">Snack Time</string>
    <string name="time_supper">Supper Time</string>


    <!-- Settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
