<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/left_nav_dashboard"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_dashboard" />

        <item
            android:id="@+id/left_nav_add"
            android:icon="@drawable/logo_black"
            android:title="@string/title_add" />

        <item
            android:id="@+id/left_nav_medicals"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/title_medicals" />
    </group>

    <item android:title="@string/l_menu_settings">
        <menu>
            <item
                android:id="@+id/left_nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/l_menu_settings" />
            <item
                android:id="@+id/left_nav_profile"
                android:icon="@drawable/material_account_box"
                android:title="@string/l_menu_profile" />
        </menu>
    </item>

    <item android:title="@string/l_menu_docs">
        <menu>
            <item
                android:id="@+id/left_nav_terms"
                android:icon="@drawable/material_assignment_ind"
                android:title="@string/l_menu_terms">
            </item>

            <item
                android:id="@+id/left_nav_confidence"
                android:icon="@drawable/material_assignment"
                android:title="@string/l_menu_confidence">
            </item>
        </menu>
    </item>



</menu>
