<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PillsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="" />

            <com.pillsgt.pgt.managers.keywordautocomplete.PillsAutoCompleteView
                android:id="@+id/pills"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="3"
                tools:text="@string/autocomplete_placeholder">
            </com.pillsgt.pgt.managers.keywordautocomplete.PillsAutoCompleteView>

            <TextView
                android:id="@+id/pillsDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/labelReminders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/label_reminders" />

            <Spinner
                android:id="@+id/cron_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dialog"
                android:layout_below="@+id/pills" />

            <Spinner
                android:id="@+id/cron_interval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />


            <TextView
                android:id="@+id/labelReminderTimes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/label_reminder_times" />

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/time_input_fragment"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:orientation="vertical"/>


            <TextView
                android:id="@+id/labelSchedulers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/label_schedulers" />


            <TextView
                android:id="@+id/labelDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_duration" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                <TextView
                    android:id="@+id/startDateLabel"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:onClick="setStartDate"
                    android:text="@string/duration_start" />

                <TextView android:id="@+id/startDate"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:onClick="setStartDate"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                <TextView
                    android:id="@+id/endDateLabel"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:onClick="setEndDate"
                    android:text="@string/duration_end" />

                <TextView android:id="@+id/endDate"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:onClick="setEndDate"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16dp" />
                </LinearLayout>

            </LinearLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/duration_group">

                <RadioButton
                    android:id="@+id/dCheckedPeriod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/duration_input_selected_period" />

                <RadioButton
                    android:id="@+id/dContinuous"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/duration_input_continuous" />

                <RadioButton
                    android:id="@+id/dNumberOfDays"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/duration_input_number_of_days" />
            </RadioGroup>

<!--
            <TextView
                android:id="@+id/labelFrequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_frequency" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/frequency_group">

            <RadioButton
                android:id="@+id/fEveryDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/every_day" />

            <RadioButton
                android:id="@+id/fDaysOfWeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/days_of_week" />

            <RadioButton
                android:id="@+id/fDaysInterval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/days_interval" />

        </RadioGroup>
-->
         <Button
            android:id="@+id/manage_pills"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="managePills"
            android:text="Ok" />

        </LinearLayout>
    </ScrollView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_menu_revert" />


</android.support.design.widget.CoordinatorLayout>